# kmeans

./: CMakeLists.txt  kmeansConfig.cmake.in
include/kmeans/: kmeans.h  point.h
src/: kmeans.cpp  main.cpp  point.cpp
src/test/: test_data_loading.cpp  test_end_to_end.cpp  test_point.cpp
test/: test_point.cpp
